--- a/public/index.html
+++ b/public/index.html
@@ -39,5 +39,12 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
+    <script type="text/javascript">
+      $("#flipbook").turn({
+        width: 400,
+        height: 300,
+        autoCenter: true
+      });
+    </script>
   </body>
 </html>
